# backups

./: .gitignore  README.md  backup.yaml  pyproject.toml  restore.yaml
config/: .vimrc  id_rsa  id_rsa.pub  passdb.kdbx  test.txt
config/nvim/: init.lua  lazy-lock.json
config/nvim/after/plugin/: completion.lua  lsp.lua  telescope.lua  themes.lua  treesitter.lua  undotree.lua
config/nvim/lua/default/: lazy.lua
config/nvim/lua/default/config/: autocmds.lua  init.lua  keymaps.lua
config/nvim/lua/default/plugins/: luasnip.lua  telescope.lua  treesitter.lua
config/nvim/lua/lucot/: init.lua  lazy_init.lua  packer.lua  remap.lua  set.lua
config/nvim/lua/lucot/lazy/: colours.lua  fugitive.lua  init.lua  lsp.lua  telescope.lua  treesitter.lua
config/nvim/plugin/: packer_compiled.lua
config/tmux/: tmux.conf
playbooks/: backup.yaml  denv.yaml  docker.yaml  install.yaml  keepass.yaml  nvim.yaml  poetry.yaml  restore.yaml  uv.yaml
playbooks/backup/: configs.yaml  passwords.yaml  ssh.yaml
playbooks/config/: backup.yaml  restore.yaml
playbooks/data/: passdb.kdbx
playbooks/data/.claude/: CLAUDE.md  settings.json
playbooks/data/.claude/skills/architecture-review/: SKILL.md
playbooks/data/.claude/skills/design-feature/: SKILL.md
playbooks/data/.claude/skills/randd/: SKILL.md
playbooks/data/ssh/: id_ed25519  id_ed25519.pub  id_rsa  id_rsa.pub  id_rsa_tii  id_rsa_tii.pub
playbooks/install/: docker.yaml  keepass.yaml  nvim.yaml  poetry.yaml  uv.yaml
playbooks/restore/: configs.yaml  passwords.yaml  ssh.yaml
(+11 files in other folders)
