[tool.poetry]
name = "backups"
version = "0.1.0"
description = ""
authors = ["Emanuele Panizio <panc86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
