[tool.poetry]
name = "backups"
version = "0.1.0"
description = "Automated backup/restore scripts via Ansible playbooks"
authors = ["Emanuele Panizio <panc86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
ansible = "^9.3.0"
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
