[tool.poetry]
name = "backups"
description = "Automated backup/restore scripts via Ansible playbooks"
authors = ["Emanuele Panizio <panc86@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
ansible-core = "^2.12"
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
